.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: web
