.kubernetes/ingress.yml
apiVersion: extension/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: aaa
      http:
        paths:
          - backend:
              serviceName: web-service
              servicePort: 8080
